# rules_gleam

./: .bazelignore  .gitignore  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  extensions.bzl  go.mod  go.sum
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: integrity.jq  publish.yml  release.yml  release_prep.sh  test.yml
examples/basic/: BUILD  BUILD.bazel  MODULE.bazel  example.gleam  example_ffi.erl
examples/basic/demo/: BUILD  BUILD.bazel  demo.gleam  internal.gleam
examples/gleamjs/: BUILD  MODULE.bazel  gleam.toml  manifest.toml
examples/gleamjs/demo/: BUILD  demo.gleam  internal.gleam
examples/gleamjs/exec/: BUILD  example.gleam  example_ffi.mjs  example_test.gleam
examples/greeter/: BUILD.bazel  MODULE.bazel  gleam.toml
examples/greeter/src/: greeter.gleam
examples/greeter/test/: greeter_test.gleam
examples/httpserver/: BUILD.bazel  MODULE.bazel  eventz.gleam  gleam.toml  main.gleam  manifest.toml
examples/testall/: BUILD.bazel  MODULE.bazel  gleam.toml  main.gleam  manifest.toml
examples/testall/lustreserver/: BUILD.bazel  server.gleam
examples/todo/: BUILD.bazel  MODULE.bazel  gleam.toml  manifest.toml  todo.gleam  todo_test.gleam
examples/todo/demo/: BUILD  demo.gleam
examples/todo/src/: todo.gleam
examples/todo/test/: todo_test.gleam
gazelle/: BUILD  README.md
gazelle/gleam/: BUILD  config_test.go  configurer.go  configurer_test.go  language.go  language_generate_rules.go  language_generate_rules_test.go  resolver.go  resolver_test.go  utils.go
gazelle/gleam/gentestdata/directivegleamvisibility/: BUILD.old  BUILD.want  test.gleam
gazelle/gleam/gentestdata/externaldeps/: BUILD.want  with_external_dep.gleam
gazelle/gleam/gentestdata/internalmodule/: BUILD.want  calculator.gleam
gazelle/gleam/gentestdata/internalpackage/: BUILD.want  hello.gleam
gazelle/gleam/gentestdata/internalpackage/internal/: BUILD.want  demo.gleam
gazelle/gleam/gentestdata/mixed_bin_erl_internal/: BUILD.want  internal.gleam  main.gleam
gazelle/gleam/gentestdata/mixedbinerlinternaltest/: BUILD.want  main.gleam  main_test.gleam
gazelle/gleam/gentestdata/multiplebins/: BUILD.want  main_one.gleam  main_two.gleam
gazelle/gleam/gentestdata/multiplegleamonemain/: BUILD.want  character.gleam  file.gleam
gazelle/gleam/gentestdata/simple/: BUILD.want
gazelle/gleam/gentestdata/withunittest/example/another/: BUILD.want  tester_test.gleam
gazelle/gleam/gentestdata/withunittest/example/deeper/: BUILD.want  okay.gleam  okay_test.gleam
gazelle/gleam/gentestdata/withunittest/example/deeper/internal/: BUILD.want
gazelle/gleam/parser/: BUILD  gleam.peg  parser.go  parser_test.go
gazelle/gleam/testdata/directivegleamvisibility/: BUILD.want
gazelle/gleam/testdata/internalmodule/: internal.gleam
gazelle/gleam/testdata/internalpackage/: BUILD.want
gazelle/gleam/testdata/internalpackage/internal/: BUILD.want
gazelle/gleam/testdata/mixed_bin_erl_internal/: hello_ffi.erl  test_ffi.erl
gazelle/gleam/testdata/multiplegleamonemain/: BUILD.want  faction.gleam  guild.gleam
gazelle/gleam/testdata/simple/: BUILD.want  hello.gleam
gazelle/patches/: BUILD
gazelle/patches/cmd/gazelle/: langs.go.diff
gleam/: BUILD  build.bzl  defs.bzl  gleam_binary.bzl  gleam_erl_library.bzl  gleam_library.bzl  gleam_repository.bzl  gleam_test.bzl  provider.bzl
gleam/gleeunit/: BUILD  gleam.toml  gleam_gleeunit_gleeunit_ffi.mjs  gleam_gleeunit_panic_ffi.erl  gleam_gleeunit_panic_ffi.mjs  gleam_gleeunit_progress_ffi.erl  gleam_panic.gleam  gleeunit_ffi.mjs  manifest.toml  reporting.gleam
gleam/js/: BUILD  build.bzl  defs.bzl  gleam_js_binary.bzl  gleam_js_ffi_library.bzl  gleam_js_library.bzl  gleam_js_test.bzl  provider.bzl
gleam/js/templates/: BUILD  gleam_test.gleam  main_js.mjs  main_js.sh  test_js.mjs
gleam/private/: gleam_bin_for_host.bzl
gleam/templates/: BUILD  [[main_module]].app  [[main_module]].sh  [[main_module]]@@main.erl  gleam_test.gleam
gleam_hex/: BUILD  repositories.bzl
gleam_tools/: BUILD  coded_versions.bzl  platforms.bzl  repositories.bzl  toolchain.bzl
internal/: common.bzl
internal/tools/: BUILD.bazel  extensions.bzl  gleam_repository_tools.bzl  gleam_repository_tools_srcs.bzl  go_cache_repositories.bzl  repositories.bzl
internal/tools/find_gleam_modules/: BUILD  README.md  find_gleam_modules.go  find_gleam_modules_test.go
internal/tools/gazelle/: BUILD  BUILD.bazel  fix-update.go  fix_test.go  integration_gazelle_tool_test.go  integration_test.go  langs.go  main.go  update-repos.go
internal/tools/gazelle/wspace/: BUILD  finder.go
internal/tools/get_hex_repos/: BUILD  BUILD.bazel  get_hex_repos.go  get_hex_repos_test.go
internal/tools/hack_for_transitive_deps/: BUILD  BUILD.bazel  hack_keep_indirect_deps.go
internal/tools/list_repository_tools_srcs/: list_repository_tools_srcs.go
