module(
    name = "rules_gleam",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.45.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    fail_on_version_conflict = False,
    go_mod = "//:go.mod",
)
use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_google_go_cmp", "com_github_kr_pretty", "com_github_lithammer_dedent")

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_erlang", version = "3.16.0")
bazel_dep(name = "platforms", version = "1.0.0")

erlang_config = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_config",
)
use_repo(
    erlang_config,
    "erlang_config",
)

gleam = use_extension("@rules_gleam//:extensions.bzl", "gleam")
gleam.toolchain(version = "v1.12.0")
use_repo(gleam, "gleam_toolchains")

register_toolchains("@gleam_toolchains//:all")
