bazel_dep(name = "rules_gleam", version = "0.0.0")
local_path_override(
    module_name = "rules_gleam",
    path = "../..",
)

bazel_dep(name = "aspect_rules_js", version = "2.7.0")
bazel_dep(name = "gazelle", version = "0.45.0")

gleam = use_extension("@rules_gleam//:extensions.bzl", "gleam")
gleam.deps(gleam_toml = "//:gleam.toml")
use_repo(gleam, "hex_gleam_json", "hex_gleam_stdlib", "hex_gleeunit")
