load("@rules_gleam//gleam:defs.bzl", "gleam_library", "gleam_test", "gleam_binary")

package(
    default_visibility = ["//visibility:public"],
)

# Main library target
gleam_library(
    name = "todo_lib",
    srcs = ["todo.gleam"],
    deps = [
        "@hex_gleam_stdlib//:gleam_stdlib",
    ],
)

# Test target
gleam_test(
    name = "todo_test",
    srcs = ["todo_test.gleam"],
    deps = [
        ":todo_lib",
        "@hex_gleeunit//:gleeunit",
    ],
    testonly = True,
)

# Main binary target
gleam_binary(
    name = "todo",
    srcs = ["todo.gleam"],
    deps = [
        ":todo_lib",
    ],
)

exports_files(["gleam.toml"])
