load("@rules_gleam//gleam:defs.bzl", "gleam_library")

gleam_library(
    name = "server",
    srcs = ["server.gleam"],
    visibility = ["//visibility:public"],
    deps = [
        "@hex_gleam_stdlib//gleam:int",
        "@hex_lustre//lustre:element",
        "@hex_lustre//lustre:event",
        "@hex_lustre//lustre/element:html",
    ],
)
