load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "gazelle",
    srcs = [
        "main.go",  # keep
    ],
    importpath = "github.com/iocat/rules_gleam/internal/tools/gazelle",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_lib",
    srcs = ["main.go"],
    importpath = "github.com/iocat/rules_gleam/internal/tools/gazelle",
    visibility = ["//:__subpackages__"],
    deps = [
        "//gazelle/gleam",
        "@gazelle//language",
    ],
)
